# marinedebrisdetector

./: .gitignore  callbacks.py  eval.ipynb  eval.py  hubconf.py  loss.py  metrics.py  mifdal_validation.py  plot_attention_callback.py  predictor.py  pyproject.toml  readme.md  requirements.txt  setup.py  test.py  test.sh  test_kikaki.py  test_rf.py  train.py  train.sh  train_classification.py  train_marinedetector.py  train_segmentation.py  transforms.py  visualization.py
comparisons/: marida_rf.py  test_kikaki.py  test_rf.py  test_rf_original_data.py  test_rf_our_data.py
data/: __init__.py  datamodule.py  download_marida.py  durban.py  floatingobjects.py  label_refinement.py  marida.py  marinedebris.py  marinedebrisdatamodule.py  plastic_litter_project.py  refined_floatingobjects.py  s2ships.py  utils.py
data/floatingobjects/: __init__.py  floatingobjects.py
doc/: data.md  model_training.md  models.md
durban_evaluation/: durban_confusions.py  predict_durban.py
evaluation/: .gitignore  durban_confusions.py
experiments/: setup_modules.sh  train_ours.sh  unet.run  unet.sh  unet1.run  unet2.run  unet3.run  unetpp1.run  unetpp2.run  unetpp3.run
experiments/ablations/: run_experiment.sh  unetpp.run  unetpp_no_label_refinement.run  unetpp_no_label_refinement_no_s2ships.run  unetpp_no_marida_no_label_refinement.run  unetpp_no_s2ships.run
experiments/final-runs/: unetpp.run
experiments/label-refinement/: run_experiment.sh
experiments/model-experiment/: run_experiment.sh
lightning_logs/version_0/: events.out.tfevents.1664727331.eceopc1.1249499.0  hparams.yaml
lightning_logs/version_1/: events.out.tfevents.1664729241.eceopc1.1264476.0
marinedebrisdetector/: __init__.py  callbacks.py  checkpoints.py  main_cli.py  marinedebrisdetector.py  predictor.py  test.py  train.py  transforms.py  visualization.py
marinedebrisdetector/data/: durban.py  floatingobjects.py  label_refinement.py  marida.py  marinedebrisdatamodule.py  refined_floatingobjects.py  s2ships.py  utils.py
marinedebrisdetector/model/: __init__.py  model.py  segmentation_model.py
model/: TinyCBAM.py  __init__.py  justCBAM.py  mifdal_model.py  segmentation_model.py  swin_t.py  unet.py
model/cbamresnet/: __init__.py
model/classification/: TinyCBAM.py  justCBAM.py  vit.py
model/explLRP/: layers_ours.py
model/random_forest/: main.py  main_qualitative.py  random_forest.py  readme.md
notebooks/: PlanetScope.ipynb  PlanetScopeTransferability.ipynb  RoleOfAtmosphericCorrection.ipynb  refinelabels.ipynb
training_scripts/: unet.sh  unetpp.sh
(+16 files in other folders)
