[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marinedebrisdetector"
version = "0.0.2"
authors = [
  { name="Marc Russwurm", email="marc.russwurm@epfl.ch" },
]
description = "A detector of marine debris with Sentinel-2 scenes"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.scripts]
marinedebrisdetector = "marinedebrisdetector:main"

[project.urls]
"Homepage" = "https://github.com/marccoru/marinedebrisdetector"

[tool.setuptools.packages.find]
where = ["marinedebrisdetector"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
