[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marinedebrisdetector"
version = "0.0.2"
authors = [
  { name="Marc Russwurm", email="marc.russwurm@epfl.ch" },
]
description = "A detector of marine debris with Sentinel-2 scenes"
readme = "readme.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch",
    "torchvision",
    "pytorch_lightning",
    "numpy",
    "pandas",
    "rasterio",
    "shapely",
    "geopandas",
    "einops",
    "tqdm",
    "scikit-learn",
    "scikit-image",
    "matplotlib",
    "wandb",
    "segmentation-models-pytorch"
]

[project.scripts]
marinedebrisdetector = "marinedebrisdetector:main"

[project.urls]
"Homepage" = "https://github.com/marccoru/marinedebrisdetector"

[tool.hatch.build]
only-packages = true

